--- a/nature-page.css
+++ b/nature-page.css
@@ -63,6 +63,7 @@ a:active {
     background-size: 100%;
     color: #fff;
     text-shadow: 0.1em 0.1em 0.3em #006363;
+    object-fit: cover;
 }
 
 /*  Main section */
