--- a/style.css
+++ b/style.css
@@ -137,13 +137,23 @@ img {
 /* https://symbl.cc/en/collections/arrow-symbols/ 
 https://unicode.org/charts/
 */
-.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+.swiper-button-prev:after {
   content: '<';
   content: '\2B9C';
+
+  font-family: "Font Awesome 5 Free";
+  font-weight: 700;
+  font-size: 24px;
+  content: "\f0da";
 }
-.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+.swiper-button-next:after {
   content: '>';
   content: '\2B9E';
+
+  font-family: "Font Awesome 5 Free";
+  font-weight: 700;
+  font-size: 24px;
+  content: "\f0da";
 }
 
 /* for card */
