--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ https://unicode.org/charts/
   font-family: "Font Awesome 5 Free";
   font-weight: 700;
   font-size: 24px;
-  content: "\f0da";
+  content: "\f0d9";
 }
 .swiper-button-next:after {
   content: '>';
