--- a/nature-page.css
+++ b/nature-page.css
@@ -17,6 +17,7 @@ body {
     width: 95%;
     margin: 0 auto;
 }
+
 /* Links */
 a:link {
     color: #4962D6;
@@ -56,15 +57,17 @@ a:active {
 }
 
 /*  Hero image */
-.hero {
+/* t-7
+.hero {  
     padding: 2em 1em;
     text-align: center;
     background-image: url(img/lake_small_560.jpg);
     background-size: 100%;
     color: #fff;
     text-shadow: 0.1em 0.1em 0.3em #006363;
-    object-fit: cover;
-}
+	 object-fit: cover;
+    
+} */
 
 /*  Main section */
 main {
@@ -82,6 +85,9 @@ h2.subtitle {
 /* Мобильное меню ================================= */
 .menu {
     position: relative;    /* для позиционирования внутренних элементов */
+
+    top:0;
+    left: 0;
 }
 
 .menu-toggle {
@@ -97,7 +103,7 @@ h2.subtitle {
     height: 1em;
 
     line-height: 0.4;
-    text-indent: 5em;   /* скрывают текст кнопки-пере­ключателя */
+    text-indent: 5em;   /* скрывают текст кнопки-переключателя */
 
     white-space: nowrap;
     overflow: hidden;
@@ -121,7 +127,7 @@ h2.subtitle {
 .menu-dropdown {
     display: none; 
 
-    position: absolute;
+                     /* position: absolute; */
     right: 0;
     left: 0;
     margin: 0;
@@ -160,6 +166,7 @@ h2.subtitle {
 
 /* МЕДИАЗАПРОСЫ */
 
+/* контрольная точка 35em=560px */
 @media (min-width: 560px) {
     .menu-toggle {
         display: none;
@@ -201,18 +208,26 @@ h2.subtitle {
         font-size: 2.25rem;
     }
 
-    .page-header {
+    /* .page-header {
         padding: 1em;
+    } */
+
+    /* t-7 */
+    .page-header {
+        padding: 1em 0;
     }
 
-    .hero {
+    /* t-7 */
+    /* .hero {
         padding: 5em 3em;
         font-size: 1.2rem;
         background-image: url(img/lake_medium_800.jpg);
-    }
+    } */
+    
+    /* t-7 */
     main {
-        padding: 2em 1em;
-    }
+        padding: 2em 0;
+    } 
 }
 
 @media (min-width: 1024px) {
@@ -224,26 +239,38 @@ h2.subtitle {
         padding: 0 4em;
     }
 
-    .page-header {
+    /* .page-header {
         padding: 1em 4em;
-    }
+    } */
 
-    .hero {
+    /* .hero {
         padding: 7em 6em;
         background-image: url(img/lake_1280.jpg);
-    }
+    } */
 
-    main {
+    /* t-7 */
+    /* main {
         padding: 2em 4em;
-    }
+    } */
 }
 
 /* t-7 */
 footer {
     margin-top: 2em;
-    padding: 2em 4em;
+    padding: 2em 1em;
     background-color: #006363;
     background-color: #187abe;
     color: white;
     text-align: center;
 }
+
+/* t-7 */
+.mySwiper3 .swiper-slide {
+    background-position: center;
+    background-size: cover;
+  }
+
+.mySwiper3 .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
