--- a/style.css
+++ b/style.css
@@ -55,10 +55,12 @@ img {
 }
 
 .container {
-  max-width: 75rem;
+  /* t-7 */
+  max-width: 150rem;
   height: auto;
   margin-inline: auto;
-  padding-inline: 1.25rem;
+   /* t-7 */
+  /* padding-inline: 1.25rem; */
 }
 
 /* swiper-bundle.min.css */
@@ -137,10 +139,11 @@ img {
 /* https://symbl.cc/en/collections/arrow-symbols/ 
 https://unicode.org/charts/
 */
+/* https://fontawesome.com/search?q=arrows&o=r&m=free */
 .swiper-button-prev:after {
   content: '<';
   content: '\2B9C';
-
+  
   font-family: "Font Awesome 5 Free";
   font-weight: 700;
   font-size: 24px;
@@ -149,7 +152,7 @@ https://unicode.org/charts/
 .swiper-button-next:after {
   content: '>';
   content: '\2B9E';
-
+  
   font-family: "Font Awesome 5 Free";
   font-weight: 700;
   font-size: 24px;
@@ -162,7 +165,7 @@ https://unicode.org/charts/
   bottom: 40px;
   padding: 30px 50px;
   background-color: rgba(0,0,0,.1);
-  color: var(--white-200);
+  color: var(--white-200); 
 }
 
 /* Responsive breakpoints Swiper 
@@ -177,10 +180,11 @@ https://unicode.org/charts/
     }
   }
  */
-
 @media (max-width: 560px) {
 	.slider-item-content {
 	  font-size: 15px;  
 	}
 }
+
+
 
